# waymark

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  _typos.toml  agents.md  build.rs  deny.toml  docker-compose.yml  pyproject.toml  rappel_lang.py  taplo.toml
core-python/: experiments.md  pyproject.toml
core-python/proto/: ast_pb2.py  ast_pb2.pyi  ast_pb2_grpc.py  messages_pb2.py  messages_pb2.pyi  messages_pb2_grpc.py  messages_pb2_grpc.pyi
core-python/src/rappel_core/: __init__.py  cli_smoke.py  dag.py  dag_viz.py  ir_executor.py  ir_format.py  runloop.py  worker_pool.py
core-python/tests/: test_dag_converter.py  test_ir_executor.py  test_runloop.py  test_runner_executor.py  test_worker_pool.py
core-python/tests/runner/: test_state.py
core-python/waymark/: __init__.py
core-python/waymark/proto/: __init__.py  ast_pb2.pyi  messages_pb2_grpc.py  messages_pb2_grpc.pyi
crates/core-backend/: Cargo.toml
crates/core-backend/src/: data.rs  lib.rs
crates/dag/: Cargo.toml
crates/dag/src/: models.rs  nodes.rs  validate.rs
crates/fuzzer/: Cargo.toml
crates/fuzzer/src/: generator.rs  harness.rs
crates/lib/action-correlator/: Cargo.toml
crates/lib/backend-fault-injection/: Cargo.toml
crates/lib/backend-memory/: Cargo.toml
crates/lib/backend-postgres/: Cargo.toml
crates/lib/backends-core/: Cargo.toml
crates/lib/config/: Cargo.toml
crates/lib/core-backend/: Cargo.toml
crates/lib/core-backend2/: Cargo.toml
crates/lib/dag/: Cargo.toml
crates/lib/dag-builder/: Cargo.toml
crates/lib/dag-validator/: Cargo.toml
crates/lib/garbage-collector-loop/: Cargo.toml
crates/lib/ids/: Cargo.toml
crates/lib/instance-builder/: Cargo.toml
crates/lib/jsonlines/: Cargo.toml
crates/lib/managed-process/: Cargo.toml
crates/lib/observability-setup/: Cargo.toml  build.rs
crates/lib/proto/: Cargo.toml  build.rs
crates/lib/reserved-process/: Cargo.toml
crates/lib/runloop/: Cargo.toml
crates/lib/runner-eval-core/: Cargo.toml
crates/waymark/: Cargo.toml
crates/waymark/src/: config.rs  lib.rs  messages.rs  observability.rs  server_worker.rs
example_app/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
example_app/src/example_app/: web.py  workflows.py
example_app/tests/: test_web.py
python/: debug_ir.py  pyproject.toml  worker.py
python/benchmarks/: benchmark_workflow.py
python/proto/: ast_pb2.py  ast_pb2.pyi  ast_pb2_grpc.py  ir_pb2.py  ir_pb2.pyi  ir_pb2_grpc.py  messages_pb2.py  messages_pb2.pyi  messages_pb2_grpc.py  messages_pb2_grpc.pyi
python/scripts/: ast_workflow_demo.py  benchmark_instances.py  fuzz_oracle.py
python/src/carabiner/: __init__.py
python/src/carabiner_worker/: __init__.py  actions.py  bridge.py  formatter.py  registry.py  serialization.py  worker.py  workflow.py  workflow_dag.py  workflow_runtime.py
python/src/rappel/: __init__.py  action_worker.py  actions.py  bridge.py  durable.py  instance_worker.py  ir.py  ir_builder.py  logger.py  registry.py  schedule.py  serialization.py  worker.py  workflow.py  workflow_dag.py  workflow_runtime.py
python/src/waymark/: __init__.py  actions.py  bridge.py  dependencies.py  exceptions.py  ir_builder.py  logger.py  schedule.py  serialization.py  soak_actions.py  type_coercion.py  worker.py  workflow.py  workflow_runtime.py
python/tests/: conftest.py  test_actions.py  test_bridge.py  test_dependencies.py  test_exceptions.py  test_formatter.py  test_ir_builder.py  test_ir_errors.py  test_ir_parser.py  test_public_api.py  test_pytest_in_memory_runtime.py  test_registry.py  test_schedule.py  test_serialization.py  test_type_coercion.py  test_worker.py  test_workflow.py  test_workflow_dag.py  test_workflow_dependencies.py  test_workflow_runtime.py
python/tests/fixtures/: test_actions.py
python/tests/fixtures_actions/: action_kwargs.py  action_mixed_args.py  action_no_assignment.py  action_positional_args.py  action_return.py  action_variable_args.py  literal_return.py  simple_action.py  soak_actions.py  variable_return.py
python/tests/fixtures_comprehension/: __init__.py  dict_comprehension_assignment.py  dict_comprehension_tuple.py  list_comprehension_assignment.py  list_comprehension_ifexp.py
python/tests/fixtures_conditional/: __init__.py  if_await_action_condition.py  if_multiple_calls.py
python/tests/fixtures_control_flow/: for_multi_action.py  for_simple.py  if_elif_else.py  if_multi_action.py  if_no_else_continue.py  if_simple.py  if_with_accumulator.py  try_except_capture.py  try_multi_action.py  try_multi_except.py  try_simple.py  while_simple.py
python/tests/fixtures_for_loop/: __init__.py  for_break.py  for_concat_accumulator.py  for_continue.py  for_counter_accumulator.py  for_dict_accumulator.py  for_multi_accumulator.py  for_multiple_calls.py  for_single_accumulator.py  for_with_append.py
python/tests/fixtures_gather/: gather_generator.py  gather_generator_filter.py  gather_listcomp.py  gather_listcomp_filter.py  gather_listcomp_tuple_unpack.py  gather_nested.py  gather_run_action_spread.py  gather_run_action_static.py  gather_simple.py  gather_to_variable.py  gather_tuple_unpack.py  gather_unsupported_variable.py  gather_with_args.py
python/tests/fixtures_models/: __init__.py  dataclass_action_arg.py  dataclass_positional.py  dataclass_simple.py  dataclass_with_defaults.py  pydantic_action_arg.py  pydantic_ast_variants.py  pydantic_nested.py  pydantic_return_direct.py  pydantic_simple.py  pydantic_with_defaults.py
python/tests/fixtures_policy/: instance_attr_policies.py  integration_crash_recovery.py  integration_exception_custom.py  policy_variations.py
python/tests/fixtures_side_effects/: __init__.py  (+1 more)
scripts/: analyze_timing.py  assemble_wheels.py  benchmark_report.py  benchmark_visualization.html  build_wheel.py  coverage_report.py  dag_visualization.html  fix_proto_imports.py  generate_ir.py  install_protoc.sh  parse_bench_logs.py  parse_chrome_trace.py  pyproject.toml  rename_project.py  run_benchmarks.py  update_version.py  workspace_dep_checklist.py
(+952 files in other folders)
