[workspace]
resolver = "3"
members = ["crates/lib/*", "crates/bin/*"]

[workspace.package]
version = "0.1.0"
publish = false

[workspace.dependencies]
waymark-backend-fault-injection = { path = "crates/lib/backend-fault-injection" }
waymark-backend-memory = { path = "crates/lib/backend-memory" }
waymark-backend-postgres = { path = "crates/lib/backend-postgres" }
waymark-backend-postgres-migrations = { path = "crates/lib/backend-postgres-migrations" }
waymark-backends-core = { path = "crates/lib/backends-core" }
waymark-config = { path = "crates/lib/config" }
waymark-core-backend = { path = "crates/lib/core-backend" }
waymark-dag = { path = "crates/lib/dag" }
waymark-dag-builder = { path = "crates/lib/dag-builder" }
waymark-dag-validator = { path = "crates/lib/dag-validator" }
waymark-dag-viz = { path = "crates/lib/dag-viz" }
waymark-garbage-collector-backend = { path = "crates/lib/garbage-collector-backend" }
waymark-garbage-collector-config = { path = "crates/lib/garbage-collector-config" }
waymark-garbage-collector-loop = { path = "crates/lib/garbage-collector-loop" }
waymark-ir-conversions = { path = "crates/lib/ir-conversions" }
waymark-ir-format = { path = "crates/lib/ir-format" }
waymark-ir-parser = { path = "crates/lib/ir-parser" }
waymark-managed-process = { path = "crates/lib/managed-process" }
waymark-message-conversions = { path = "crates/lib/message-conversions" }
waymark-nonzero-duration = { path = "crates/lib/nonzero-duration" }
waymark-observability = { path = "crates/lib/observability" }
waymark-observability-macros = { path = "crates/lib/observability-macros" }
waymark-observability-setup = { path = "crates/lib/observability-setup" }
waymark-pool-status = { path = "crates/lib/pool-status" }
waymark-proto = { path = "crates/lib/proto" }
waymark-reserved-process = { path = "crates/lib/reserved-process" }
waymark-runloop = { path = "crates/lib/runloop" }
waymark-runner = { path = "crates/lib/runner" }
waymark-runner-state = { path = "crates/lib/runner-state" }
waymark-scheduler-backend = { path = "crates/lib/scheduler-backend" }
waymark-scheduler-config = { path = "crates/lib/scheduler-config" }
waymark-scheduler-core = { path = "crates/lib/scheduler-core" }
waymark-scheduler-loop = { path = "crates/lib/scheduler-loop" }
waymark-secret-string = { path = "crates/lib/secret-string" }
waymark-smoke-sources = { path = "crates/lib/smoke-sources" }
waymark-support-integration = { path = "crates/lib/support-integration" }
waymark-support-test = { path = "crates/lib/support-test" }
waymark-tick-loop = { path = "crates/lib/tick-loop" }
waymark-utils-futures = { path = "crates/lib/utils-futures" }
waymark-utils-tokio-channel = { path = "crates/lib/utils-tokio-channel" }
waymark-webapp-backend = { path = "crates/lib/webapp-backend" }
waymark-webapp-bringup = { path = "crates/lib/webapp-bringup" }
waymark-webapp-config = { path = "crates/lib/webapp-config" }
waymark-webapp-core = { path = "crates/lib/webapp-core" }
waymark-webapp-routes = { path = "crates/lib/webapp-routes" }
waymark-worker-core = { path = "crates/lib/worker-core" }
waymark-worker-inline = { path = "crates/lib/worker-inline" }
waymark-worker-message-protocol = { path = "crates/lib/worker-message-protocol" }
waymark-worker-metrics = { path = "crates/lib/worker-metrics" }
waymark-worker-process = { path = "crates/lib/worker-process" }
waymark-worker-process-pool = { path = "crates/lib/worker-process-pool" }
waymark-worker-process-spec = { path = "crates/lib/worker-process-spec" }
waymark-worker-remote = { path = "crates/lib/worker-remote" }
waymark-worker-remote-bridge-bringup = { path = "crates/lib/worker-remote-bridge-bringup" }
waymark-worker-remote-bridge-service = { path = "crates/lib/worker-remote-bridge-service" }
waymark-worker-reservation = { path = "crates/lib/worker-reservation" }
waymark-worker-status-backend = { path = "crates/lib/worker-status-backend" }
waymark-worker-status-core = { path = "crates/lib/worker-status-core" }
waymark-worker-status-reporter = { path = "crates/lib/worker-status-reporter" }
waymark-workflow-registry-backend = { path = "crates/lib/workflow-registry-backend" }

anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", default-features = false }
clap = "4.5"
console-subscriber = "0.5"
cron = "0.12"
envfury = "0.2"
futures-core = "0.3"
futures-util = "0.3"
http-body-util = "0.1"
mockall = "0.14"
nix = "0.31"
nonempty-collections = "1"
proc-macro2 = "1"
proptest = "1.9"
prost = "0.12"
prost-types = "0.12"
quote = "1"
rand = "0.8"
regex = "1"
rmp-serde = "1"
rustc-hash = "2"
serde = "1"
serde_json = "1"
serial_test = "2"
sha2 = "0.10"
slotmap = "1"
sqlx = { version = "0.8", default-features = false }
syn = "2"
tera = "1"
thiserror = "2"
tokio = "1"
tokio-stream = "0.1"
tokio-util = "0.7"
tonic = "0.11"
tonic-build = "0.11"
tonic-health = "0.11"
tower = "0.5"
tracing = "0.1"
tracing-chrome = "0.7"
tracing-subscriber = "0.3"
uuid = "1"
zeroize = "1"
