[workspace]
resolver = "3"
members = ["crates/lib/*", "crates/bin/*"]

[workspace.package]
version = "0.1.0"
publish = false

[workspace.dependencies]
waymark-backend-fault-injection = { path = "crates/lib/backend-fault-injection" }
waymark-backend-memory = { path = "crates/lib/backend-memory" }
waymark-backend-postgres = { path = "crates/lib/backend-postgres" }
waymark-backend-postgres-migrations = { path = "crates/lib/backend-postgres-migrations" }
waymark-backends-core = { path = "crates/lib/backends-core" }
waymark-config = { path = "crates/lib/config" }
waymark-core-backend = { path = "crates/lib/core-backend" }
waymark-dag = { path = "crates/lib/dag" }
waymark-dag-builder = { path = "crates/lib/dag-builder" }
waymark-dag-validator = { path = "crates/lib/dag-validator" }
waymark-dag-viz = { path = "crates/lib/dag-viz" }
waymark-fn-main-common = { path = "crates/lib/fn-main-common" }
waymark-garbage-collector-backend = { path = "crates/lib/garbage-collector-backend" }
waymark-garbage-collector-config = { path = "crates/lib/garbage-collector-config" }
waymark-garbage-collector-loop = { path = "crates/lib/garbage-collector-loop" }
waymark-ids = { path = "crates/lib/ids" }
waymark-ir-conversions = { path = "crates/lib/ir-conversions" }
waymark-ir-format = { path = "crates/lib/ir-format" }
waymark-ir-parser = { path = "crates/lib/ir-parser" }
waymark-message-conversions = { path = "crates/lib/message-conversions" }
waymark-metrics-util = { path = "crates/lib/metrics-util" }
waymark-nonzero-duration = { path = "crates/lib/nonzero-duration" }
waymark-observability = { path = "crates/lib/observability" }
waymark-observability-macros = { path = "crates/lib/observability-macros" }
waymark-observability-setup = { path = "crates/lib/observability-setup" }
waymark-pool-status = { path = "crates/lib/pool-status" }
waymark-prometheus-exporter-bringup = { path = "crates/lib/prometheus-exporter-bringup" }
waymark-proto = { path = "crates/lib/proto" }
waymark-runloop = { path = "crates/lib/runloop" }
waymark-runner = { path = "crates/lib/runner" }
waymark-runner-eval-core = { path = "crates/lib/runner-eval-core" }
waymark-runner-eval-dag = { path = "crates/lib/runner-eval-dag" }
waymark-runner-executor-core = { path = "crates/lib/runner-executor-core" }
waymark-runner-expr = { path = "crates/lib/runner-expr" }
waymark-runner-expr-fmt = { path = "crates/lib/runner-expr-fmt" }
waymark-runner-retry-policy = { path = "crates/lib/runner-retry-policy" }
waymark-runner-state = { path = "crates/lib/runner-state" }
waymark-scheduler-backend = { path = "crates/lib/scheduler-backend" }
waymark-scheduler-config = { path = "crates/lib/scheduler-config" }
waymark-scheduler-core = { path = "crates/lib/scheduler-core" }
waymark-scheduler-loop = { path = "crates/lib/scheduler-loop" }
waymark-scheduler-loop-core = { path = "crates/lib/scheduler-loop-core" }
waymark-secret-string = { path = "crates/lib/secret-string" }
waymark-smoke-sources = { path = "crates/lib/smoke-sources" }
waymark-support-integration = { path = "crates/lib/support-integration" }
waymark-support-test = { path = "crates/lib/support-test" }
waymark-synthetic-exception = { path = "crates/lib/synthetic-exception" }
waymark-tick-loop = { path = "crates/lib/tick-loop" }
waymark-timed = { path = "crates/lib/timed" }
waymark-timed-channel = { path = "crates/lib/timed-channel" }
waymark-timed-future = { path = "crates/lib/timed-future" }
waymark-tokio-metrics-bringup = { path = "crates/lib/tokio-metrics-bringup" }
waymark-utils-futures = { path = "crates/lib/utils-futures" }
waymark-utils-tokio-channel = { path = "crates/lib/utils-tokio-channel" }
waymark-webapp-backend = { path = "crates/lib/webapp-backend" }
waymark-webapp-bringup = { path = "crates/lib/webapp-bringup" }
waymark-webapp-config = { path = "crates/lib/webapp-config" }
waymark-webapp-core = { path = "crates/lib/webapp-core" }
waymark-webapp-routes = { path = "crates/lib/webapp-routes" }
waymark-worker-core = { path = "crates/lib/worker-core" }
waymark-worker-inline = { path = "crates/lib/worker-inline" }
waymark-worker-metrics = { path = "crates/lib/worker-metrics" }
waymark-worker-remote = { path = "crates/lib/worker-remote" }
waymark-worker-status-backend = { path = "crates/lib/worker-status-backend" }
waymark-worker-status-core = { path = "crates/lib/worker-status-core" }
waymark-worker-status-reporter = { path = "crates/lib/worker-status-reporter" }
waymark-workflow-registry-backend = { path = "crates/lib/workflow-registry-backend" }

anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", default-features = false }
clap = "4.5"
color-eyre = "0.6"
console-subscriber = "0.5"
cron = "0.12"
either = "1"
envfury = "0.2"
function_name = "0.3"
futures-core = "0.3"
futures-util = "0.3"
http-body-util = "0.1"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
metrics-util = "0.20"
mockall = "0.14"
nix = "0.31"
nonempty-collections = "1"
proc-macro2 = "1"
proptest = "1.9"
prost = "0.12"
prost-types = "0.12"
quote = "1"
rand = "0.9"
regex = "1"
rmp-serde = "1"
rustc-hash = "2"
serde = "1"
serde_json = "1"
serial_test = "2"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false }
strum = "0.28"
syn = "2"
tera = "1"
thiserror = "2"
tokio = "1"
tokio-metrics = "0.4"
tokio-stream = "0.1"
tokio-util = "0.7"
tonic = "0.11"
tonic-build = "0.11"
tonic-health = "0.11"
tower = "0.5"
tracing = "0.1"
tracing-chrome = "0.7"
tracing-subscriber = "0.3"
uuid = "1.23"
zeroize = "1"
