[project]
name = "rappel-core"
version = "0.1.0"
description = "Asyncio core runtime components for Rappel"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "graphviz>=0.20",
    "googleapis-common-protos>=1.72.0",
    "grpcio>=1.66,<2",
    "psycopg[binary,pool]>=3.2,<4",
    "pyinstrument>=4.6,<5",
    "protobuf>=5.29,<6",
]

[project.scripts]
rappel-core-smoke = "rappel_core.cli.smoke:main"
rappel-core-benchmark = "rappel_core.cli.benchmark:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[dependency-groups]
dev = [
    "grpcio-tools>=1.66,<2",
    "mypy-protobuf>=3.7.0,<4",
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.6",
    "ty>=0.0.1a26",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"proto/messages_pb2.py" = ["E402", "N802"]
"proto/messages_pb2.pyi" = ["N802"]
"proto/messages_pb2_grpc.py" = ["N802"]
"proto/messages_pb2_grpc.pyi" = ["N802"]
"proto/ast_pb2.py" = ["E402", "N802"]
"proto/ast_pb2.pyi" = ["N802"]

[tool.ruff.format]
exclude = [
    "proto/messages_pb2.py",
    "proto/messages_pb2_grpc.py",
    "proto/ast_pb2.py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rappel_core", "proto"]

[tool.hatch.build.targets.sdist]
include = ["src", "proto", "README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=rappel_core --cov-report=term-missing"

[tool.coverage.run]
source = ["src/rappel_core"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
