[project]
name = "example-app"
version = "0.1.0"
description = "FastAPI playground that exercises rappel workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110,<0.112",
    "uvicorn>=0.25,<0.29",
    "jinja2>=3.1,<4",
    "pydantic>=2.6,<3",
    "asyncpg>=0.29,<1",
]

[project.optional-dependencies]
tests = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"example_app" = ["templates/*.html"]
