[project]
name = "carabiner"
version = "0.1.0"
description = "Python worker transport harness for benchmarking"
requires-python = ">=3.12"
dependencies = [
    "googleapis-common-protos>=1.72.0",
    "grpcio>=1.66,<2",
    "protobuf>=5.29,<6",
    "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
carabiner-worker = "carabiner_worker.worker:main"

[tool.uv]
dev-dependencies = [
    "grpcio-tools>=1.66,<2",
    "pytest>=8",
    "ty>=0.0.1a26",
    "ruff>=0.6",
    "mypy-protobuf>=3.7.0"
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"proto/messages_pb2.py" = ["E402", "N802"]
"proto/messages_pb2.pyi" = ["N802"]
"proto/messages_pb2_grpc.py" = ["N802"]
"proto/messages_pb2_grpc.pyi" = ["N802"]

[tool.ruff.format]
exclude = [
    "proto/messages_pb2.py",
    "proto/messages_pb2_grpc.py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/carabiner_worker"]

[tool.hatch.build.targets.sdist]
include = ["src", "proto", "README.md"]
