[package]
name = "waymark-core-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
waymark-runner-state = { workspace = true }
waymark-dag = { workspace = true }
waymark-backends-core = { workspace = true }
