[package]
name = "waymark-dag"
version = "0.1.0"
edition = "2024"

[dependencies]
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"]  }
waymark-proto = { workspace = true, features = ["serde"] }

[dev-dependencies]
waymark = { workspace = true }
