
[package]
name = "waymark"
version.workspace = true
edition = "2024"

[dependencies]
waymark-dag = { workspace = true }
waymark-ir-parser = { workspace = true }
waymark-proto = { workspace = true, features = ["serde", "client", "server"] }
serde_json = "1"
thiserror = { workspace = true }

[dev-dependencies]
