[package]
name = "waymark-action-correlator"
edition = "2024"
version.workspace = true
publish.workspace = true

[dependencies]
waymark-action-correlator-core = { workspace = true }
waymark-worker-core = { workspace = true }

nonempty-collections = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
uuid = { workspace = true }
