[package]
name = "waymark-backend-fault-injection"
version.workspace = true
edition = "2024"

[dependencies]
async-trait = { workspace = true }
uuid = { workspace = true }
waymark-backends-core = { workspace = true }
waymark-backend-memory = { workspace = true }
waymark-core-backend = { workspace = true }
waymark-workflow-registry-backend = { workspace = true }
