[package]
name = "waymark-backend-fault-injection"
version.workspace = true
publish.workspace = true
edition = "2024"

[dependencies]
waymark-backend-memory = { workspace = true }
waymark-backends-core = { workspace = true }
waymark-core-backend = { workspace = true }
waymark-workflow-registry-backend = { workspace = true }

nonempty-collections = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[lib]
test = false
doctest = false
