[package]
name = "waymark-backend-memory"
version.workspace = true
publish.workspace = true
edition = "2024"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
rmp-serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
waymark-backends-core = { workspace = true }
waymark-core-backend = { workspace = true }
waymark-garbage-collector-backend = { workspace = true, optional = true }
waymark-scheduler-backend = { workspace = true, optional = true }
waymark-scheduler-core = { workspace = true }
waymark-webapp-backend = { workspace = true, optional = true }
waymark-webapp-core = { workspace = true, optional = true }
waymark-worker-status-backend = { workspace = true }
waymark-workflow-registry-backend = { workspace = true }

[features]
core-backend = []
default = [
  "core-backend",
  "worker-status-backend",
  "workflow-registry-backend",
  "scheduler-backend",
  "garbage-collector-backend",
  "webapp-backend",
]
garbage-collector-backend = ["dep:waymark-garbage-collector-backend"]
scheduler-backend = ["dep:waymark-scheduler-backend"]
webapp-backend = ["dep:waymark-webapp-backend", "dep:waymark-webapp-core"]
worker-status-backend = []
workflow-registry-backend = []

[lib]
test = false
doctest = false
