[package]
name = "waymark-backend-postgres"
version.workspace = true
publish.workspace = true
edition = "2024"

[dependencies]
waymark-backend-postgres-migrations = { workspace = true }
waymark-backends-core = { workspace = true }
waymark-core-backend = { workspace = true }
waymark-dag = { workspace = true }
waymark-dag-builder = { workspace = true }
waymark-garbage-collector-backend = { workspace = true }
waymark-ir-conversions = { workspace = true }
waymark-observability = { workspace = true }
waymark-proto = { workspace = true }
waymark-runner = { workspace = true }
waymark-runner-state = { workspace = true }
waymark-scheduler-backend = { workspace = true }
waymark-scheduler-core = { workspace = true }
waymark-secret-string = { workspace = true }
waymark-webapp-backend = { workspace = true }
waymark-webapp-core = { workspace = true }
waymark-worker-status-backend = { workspace = true }
waymark-workflow-registry-backend = { workspace = true }

chrono = { workspace = true }
nonempty-collections = { workspace = true }
prost = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "uuid", "chrono", "runtime-tokio"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
waymark-ir-parser = { workspace = true }
waymark-support-test = { workspace = true }

serial_test = { workspace = true }

[lib]
doctest = false
