[package]
name = "waymark-backends-core"
version.workspace = true
publish.workspace = true
edition = "2024"

[dependencies]
serde_json = { workspace = true }
sqlx = { workspace = true, optional = true }
thiserror = { workspace = true }

[features]
default = ["sqlx-error"]

# TODO: this has to abstracted away since not all backends will use sqlx.
sqlx-error = ["dep:sqlx"]

[lib]
test = false
doctest = false
