[package]
name = "waymark-config"
edition = "2024"
version.workspace = true
publish.workspace = true

[dependencies]
waymark-garbage-collector-config = { workspace = true }
waymark-scheduler-config = { workspace = true }
waymark-webapp-config = { workspace = true }

anyhow = { workspace = true }

[lib]
test = false
doctest = false
