[package]
name = "waymark-core-backend"
version.workspace = true
publish.workspace = true
edition = "2024"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
waymark-backends-core = { workspace = true }
waymark-dag = { workspace = true }
waymark-runner-state = { workspace = true }

[lib]
test = false
doctest = false
