[package]
name = "waymark-core-backend"
version.workspace = true
publish.workspace = true
edition = "2024"

[dependencies]
waymark-backends-core = { workspace = true }
waymark-dag = { workspace = true }
waymark-ids = { workspace = true }
waymark-runner-state = { workspace = true }

chrono = { workspace = true }
nonempty-collections = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }

[lib]
test = false
doctest = false
