[package]
name = "waymark-core-backend"
version.workspace = true
publish.workspace = true
edition = "2024"

[features]
default = ["either"]

[dependencies]
waymark-backends-core = { workspace = true }
waymark-ids = { workspace = true }
waymark-runner-executor-core = { workspace = true }
waymark-runner-state = { workspace = true }

chrono = { workspace = true }
either = { workspace = true, optional = true }
nonempty-collections = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[lib]
test = false
doctest = false
