[package]
name = "waymark-core-backend2"
version.workspace = true
publish.workspace = true
edition = "2024"

[features]
default = ["either"]

[dependencies]
waymark-core-backend-metadata = { workspace = true }
waymark-ids = { workspace = true }
waymark-runner-execution-core = { workspace = true }
waymark-runner-executor-core = { workspace = true }

chrono = { workspace = true }
derive-where = { workspace = true }
either = { workspace = true, optional = true }
nonempty-collections = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[lib]
test = false
doctest = false
