[package]
name = "waymark-dag-builder"
edition = "2024"
version.workspace = true
publish.workspace = true

[dependencies]
waymark-dag = { workspace = true }
waymark-dag-validator = { workspace = true }
waymark-proto = { workspace = true, features = ["serde"] }

uuid = { workspace = true, features = ["v4"] }

[lib]
doctest = false
