[package]
name = "waymark-dag-builder"
edition = "2024"
version.workspace = true
publish.workspace = true

[dependencies]
waymark-dag = { workspace = true }
waymark-dag-validator = { workspace = true }
waymark-ids = { workspace = true }
waymark-proto = { workspace = true, features = ["serde"] }

thiserror = { workspace = true }

[dev-dependencies]
waymark-ir-parser = { workspace = true }

[lib]
doctest = false
