[package]
name = "waymark-dag-validator"
edition = "2024"
version.workspace = true
publish.workspace = true

[dependencies]
waymark-dag = { workspace = true }
waymark-proto = { workspace = true }

thiserror = { workspace = true }

[dev-dependencies]
waymark-dag-builder = { workspace = true }
waymark-ir-parser = { workspace = true }

[lib]
doctest = false
