[package]
name = "waymark-dag"
version.workspace = true
edition = "2024"

[dependencies]
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"]  }
waymark-proto = { workspace = true, features = ["serde"] }

[dev-dependencies]
waymark-ir-parser = { workspace = true }
