[package]
name = "waymark-dag"
version.workspace = true
edition = "2024"

[dependencies]
waymark-proto = { workspace = true }

rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
