[package]
name = "waymark-dag"
version.workspace = true
publish.workspace = true
edition = "2024"

[dependencies]
waymark-ids = { workspace = true }
waymark-proto = { workspace = true }

rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[lib]
test = false
doctest = false
